# tech-pluse

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: config.py  database.py  main.py  scheduler.py
app/llm/: processor.py  prompts.py
app/models/: __init__.py  article.py  cluster.py  source.py  trend.py
app/routers/: admin.py  dashboard.py
app/services/: collector.py  dedup.py  html_fetcher.py  models.py  rss.py  source_manager.py  trends.py
app/utils/: text.py
migrations/: env.py
migrations/versions/: 7d66e133bd2b_initial_schema.py  a1b2c3d4e5f6_drop_source_categories.py  b2c3d4e5f6g7_rebuild_trend_model.py  eb3e424d44f5_change_author_to_text.py
scripts/: recluster.py
